--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -25,7 +25,7 @@ body{
 /////////////// FOOTER ///////////////
 footer{
 	background:url("bkgnd-blue.jpg");
-	border-bottom: 3px solid #8eceff;
+	bottom:0;
 	h5{
 		width:100%;
 		color:#fff;
