update to footer asset

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -24,7 +24,7 @@ body{
 
 /////////////// FOOTER ///////////////
 footer{
-	background:url("bkgnd-blue.jpg");
+	background:url("/assets/bkgnd-blue.jpg");
 	bottom:0;
 	h5{
 		width:100%;
