fixing asset pipline issue

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -2,12 +2,12 @@ $orange: #f58a22;
 
 
 body{
-	background:url("bkgnd-gray.jpg");		
+	background:url("/assets/bkgnd-gray.jpg");		
 }
 
 /////////////// NAVIGATION ///////////////
 .nav{
-	background:url("bkgnd-blue.jpg");
+	background:url("/assets/bkgnd-blue.jpg");
 	border-bottom: 3px solid #8eceff;
 	a{
 		color:#fff;
