--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <link rel="stylesheet" type="text/css" href="../assets/sweetalert.css">
 </head>
 <body>
-<%= render partial: "../views/pages/navigation" %>
+<%= render partial: "/pages/navigation" %>
 <%= yield %>
-<%= render partial: "../views/pages/footer" %>
+<%= render partial: "/pages/footer" %>
 </body>
 </html>
