--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,8 @@
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-  <script src="../assets/sweetalert.min.js"></script> 
-  <link rel="stylesheet" type="text/css" href="../assets/sweetalert.css">
+  <!-- <script src="../assets/sweetalert.min.js"></script> 
+  <link rel="stylesheet" type="text/css" href="../assets/sweetalert.css"> -->
 </head>
 <body>
 <%= render partial: "/pages/navigation" %>
