--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,5 +1,5 @@
 $orange: #f58a22;
-
+$light-blue: #8eceff;
 
 body{
 	background:asset-url("bkgnd-gray.jpg");		
@@ -8,7 +8,7 @@ body{
 /////////////// NAVIGATION ///////////////
 .nav{
 	background:asset-url("bkgnd-blue.jpg");
-	border-bottom: 3px solid #8eceff;
+	border-bottom: 3px solid $light-blue;
 	a{
 		color:#fff;
 		margin: 3em 0 2em 2em;
@@ -114,3 +114,29 @@ footer{
 		}
 	}
 }
+
+
+
+/////////////// CONTACT PAGE ///////////////
+.contact{
+	background:#fff;
+	h1, h3{
+		color:$light-blue;
+		border-bottom:2px solid $light-blue;
+	}
+
+	#contact_form{
+	  border-radius: 5%;
+	  padding: 0% 12%;
+	  margin-bottom:10%;
+		.tag1{
+		}
+	}
+}
+
+
+	#map{
+		width:100%;
+		height: 200px;
+		background:gray;
+	}
