--- a/app/views/pages/send_email.js.erb
+++ b/app/views/pages/send_email.js.erb
@@ -1,3 +1,3 @@
-alert("Hey there! Thanks for submitting that. I'll definitely be in touch with you shortly.");
+alert("Hey there! Thanks for submitting that. We'll definitely be in touch with you shortly.");
 $("#contact_form")[0].reset();
 
