--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -116,6 +116,12 @@ footer{
 }
 
 
+/////////////// GALLARY PAGE ///////////////
+.gallary{
+	background:#fff;
+}
+
+
 
 /////////////// CONTACT PAGE ///////////////
 .contact{
