--- a/app/views/pages/gallary.html.haml
+++ b/app/views/pages/gallary.html.haml
@@ -1,2 +1,29 @@
-.container
+.gallary.container
 	%h1 Gallary Page
+
+	%p Look no further than Le's Signs for all your high quality vehicle graphics, banners or neon signs. We offer a wide selection of colors, fonts and styles to choose from, or you can use your own design! Each project we take on is custom-made to your needs. We work with a wide range of materials to choose from.
+
+	%h3 Our sign products include
+	%ul
+		%li Channel lettering
+		%li Vinyl graphics
+		%li Paper signs / lettering
+		%li Vehicle wraps (half and full)
+		%li Digital color printing
+		%li Magnetic signage
+		%li Plastic signs
+		%li Vinyl signs
+		%li Electric signs
+		%li Neon signs – service and repair
+
+	%a#single_1.fancybox.col-md-3{:href => "../assets/dawali.png", :title => "Dawali Mediterranean Kitchen", rel: "group"}
+		%img{:alt => "", :src => "../assets/dawali.png"}/
+
+	%a#single_1.fancybox.col-md-3{:href => "../assets/dental.png", :title => "Four Seasons Dental Studio", rel: "group"}
+		%img{:alt => "", :src => "../assets/dental.png"}/
+
+	%a#single_1.fancybox.col-md-3{:href => "../assets/tina.png", :title => "Tina Beauty Salon", rel: "group"}
+		%img{:alt => "", :src => "../assets/tina.png"}/
+
+	%a#single_1.fancybox.col-md-3{:href => "../assets/handmade.png", :title => "Handmade Signs", rel: "group"}
+		%img{:alt => "", :src => "../assets/handmade.png"}/
