--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -116,8 +116,8 @@ footer{
 }
 
 
-/////////////// GALLARY PAGE ///////////////
-.gallary{
+/////////////// GALLERY PAGE ///////////////
+.gallery{
 	background:#fff;
 }
 
