--- a/app/views/pages/gallery.html.haml
+++ b/app/views/pages/gallery.html.haml
@@ -1,5 +1,5 @@
-.gallary.container
-	%h1 Gallary Page
+.gallery.container
+	%h1 Gallery Page
 
 	%p Look no further than Le's Signs for all your high quality vehicle graphics, banners or neon signs. We offer a wide selection of colors, fonts and styles to choose from, or you can use your own design! Each project we take on is custom-made to your needs. We work with a wide range of materials to choose from.
 
