--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -33,17 +33,17 @@
 			Le's Signs has been fabricating signs for businesses in the Chicago, IL area since 1984. Owner Tom Le does all work himself and can accommodate any size neon sign, banner or billboard. Let Le’s Signs promote your business! Mr. Le prides himself in his professionalism when working with each customer to meet both the functionality and design you prefer. 
 		%article.col-md-3.col-sm-6
 			%h2 General
-			= link_to( "", pages_gallary_path, :id => 'general')
+			= link_to( "", pages_gallery_path, :id => 'general')
 			%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in molestie velit. Duis ut risus dolor. 
 		%article.col-md-3.col-sm-6
 			%h2 Electric
-			= link_to( "", pages_gallary_path, :id => 'electric')
+			= link_to( "", pages_gallery_path, :id => 'electric')
 			%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in molestie velit. Duis ut risus dolor. 
 		%article.col-md-3.col-sm-6
 			%h2 Print
-			= link_to( "", pages_gallary_path, :id => 'print')
+			= link_to( "", pages_gallery_path, :id => 'print')
 			%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in molestie velit. Duis ut risus dolor. 
 		%article.col-md-3.col-sm-6
 			%h2 Other
-			= link_to( "", pages_gallary_path, :id => 'other')
+			= link_to( "", pages_gallery_path, :id => 'other')
 			%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in molestie velit. Duis ut risus dolor. 
