--- a/app/views/pages/_navigation.html.haml
+++ b/app/views/pages/_navigation.html.haml
@@ -2,5 +2,5 @@
 	= link_to( image_tag("logo.png"), pages_index_path, :id => 'home' )
 	.pull-right
 		= link_to "HOME", pages_index_path
-		= link_to "GALLARY", pages_gallary_path
+		= link_to "GALLERY", pages_gallery_path
 		= link_to "CONTACT US", pages_contact_path
