new items in gallery

--- a/app/views/pages/gallery.html.haml
+++ b/app/views/pages/gallery.html.haml
@@ -16,14 +16,28 @@
 		%li Electric signs
 		%li Neon signs – service and repair
 
-	%a#single_1.fancybox.col-md-3{:href => "../assets/dawali.png", :title => "Dawali Mediterranean Kitchen", rel: "group"}
-		%img{:alt => "", :src => "../assets/dawali.png"}/
+	.row
+		%a#single_1.fancybox.col-md-3{:href => "../assets/dawali.png", :title => "Dawali Mediterranean Kitchen", rel: "group"}
+			%img{:alt => "", :src => "../assets/dawali.png"}/
 
-	%a#single_1.fancybox.col-md-3{:href => "../assets/dental.png", :title => "Four Seasons Dental Studio", rel: "group"}
-		%img{:alt => "", :src => "../assets/dental.png"}/
+		%a#single_1.fancybox.col-md-3{:href => "../assets/dental.png", :title => "Four Seasons Dental Studio", rel: "group"}
+			%img{:alt => "", :src => "../assets/dental.png"}/
 
-	%a#single_1.fancybox.col-md-3{:href => "../assets/tina.png", :title => "Tina Beauty Salon", rel: "group"}
-		%img{:alt => "", :src => "../assets/tina.png"}/
+		%a#single_1.fancybox.col-md-3{:href => "../assets/tina.png", :title => "Tina Beauty Salon", rel: "group"}
+			%img{:alt => "", :src => "../assets/tina.png"}/
 
-	%a#single_1.fancybox.col-md-3{:href => "../assets/handmade.png", :title => "Handmade Signs", rel: "group"}
-		%img{:alt => "", :src => "../assets/handmade.png"}/
+		%a#single_1.fancybox.col-md-3{:href => "../assets/handmade.jpg", :title => "Handmade Signs", rel: "group"}
+			%img{:alt => "", :src => "../assets/handmade-sm.jpg"}/
+
+	.row
+		%a#single_1.fancybox.col-md-3{:href => "../assets/nuSkinCare.jpg", :title => "NuVie SkinCare", rel: "group"}
+			%img{:alt => "", :src => "../assets/nuSkinCare-sm.jpg"}/
+
+		%a#single_1.fancybox.col-md-3{:href => "../assets/cnkArk.jpg", :title => "CnK Architectural", rel: "group"}
+			%img{:alt => "", :src => "../assets/cnkArk-sm.jpg"}/
+
+		%a#single_1.fancybox.col-md-3{:href => "../assets/wallclings.jpg", :title => "Vape Wall Clings", rel: "group"}
+			%img{:alt => "", :src => "../assets/wallclings-sm.jpg"}/
+
+		%a#single_1.fancybox.col-md-3{:href => "../assets/flooring.jpg", :title => "Flooring Contractor", rel: "group"}
+			%img{:alt => "", :src => "../assets/flooring-sm.jpg"}/
